--- a/index.html
+++ b/index.html
@@ -1678,7 +1678,9 @@
                                         enjeux
                                         sociétaux, économiques et préservation de la biodiversité."
                                         <div class="source-card">
-                                            <a href="https://www.syndicat-energies-renouvelables.fr/en/home-page/" class="source-link">Syndicat des énergies renouvelables</a>
+                                            <a href="https://www.syndicat-energies-renouvelables.fr/en/home-page/" class="source-link" target="_blank" rel="noopener noreferrer">
+                                                Syndicat des énergies renouvelables
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
