--- a/index.html
+++ b/index.html
@@ -171,21 +171,8 @@
             text-align: center;
             color: white;
             max-width: 800px;
-            animation: float 6s ease-in-out infinite;
             z-index: 10;
             position: relative;
-        }
-
-        @keyframes float {
-
-            0%,
-            100% {
-                transform: translateY(0px);
-            }
-
-            50% {
-                transform: translateY(-20px);
-            }
         }
 
         .main-title {
@@ -2197,7 +2184,7 @@
                             </a>
                         </div>
                         <div class="source-card">
-                            <div class="title">Nature Geoscience</div>
+                            <div class="title">Blog Bio-Ressources</div>
                             <a href="https://blog.bio-ressources.com/" target="_blank" rel="noopener noreferrer">
                                 Trois Gorges
                             </a>
@@ -2229,12 +2216,6 @@
                                 target="_blank" rel="noopener noreferrer">
                                 Projet Rhônergia (France)
                             </a>
-                        </div>
-                        <div class="source-card">
-                            <div class="title">Nature Geoscience</div>
-                            <a href="ps://www.nature.com/articles/s41561-021-00880-2" target="_blank"
-                                rel="noopener noreferrer">
-                                Émissions CO₂ et CH₄ des barrages</a>
                         </div>
                     </div>
                 </div>
@@ -2364,6 +2345,7 @@
                 <a href="https://www.esiee.fr/" target="_blank" rel="noopener noreferrer">
                     ESIEE Paris
                 </a>
+                par <br>DEBELLE Hugo, DAMELET Rémi, DAVID Augustin et DELESALLE Thomas
             </p>
         </div>
         <div class="footer-logo">
