--- a/index.html
+++ b/index.html
@@ -2335,7 +2335,6 @@
 <footer class="site-footer">
     <div class="footer-content">
         <div class="footer-text">
-            <p>© 2025 Barrages Controverse. Tous droits réservés.</p>
             <p>
                 Site fait dans le cadre de cours de
                 <a href="https://www.controverses-esiee.fr/" target="_blank" rel="noopener noreferrer">
@@ -2345,7 +2344,12 @@
                 <a href="https://www.esiee.fr/" target="_blank" rel="noopener noreferrer">
                     ESIEE Paris
                 </a>
-                par <br>DEBELLE Hugo, DAMELET Rémi, DAVID Augustin et DELESALLE Thomas
+                par<br><br>
+                Les ingénieurs de tout a l'heure:<br>
+                DEBELLE Hugo, DAMELET Rémi, DAVID Augustin et DELESALLE Thomas<br>
+                <br>
+                publié le 18 juin 2025<br>
+                ©Tous droits réservés.
             </p>
         </div>
         <div class="footer-logo">
