--- a/index.html
+++ b/index.html
@@ -2338,12 +2338,9 @@
             <p>
                 Site fait dans le cadre de cours de
                 <a href="https://www.controverses-esiee.fr/" target="_blank" rel="noopener noreferrer">
-                    contreverse
-                </a>
-                a
-                <a href="https://www.esiee.fr/" target="_blank" rel="noopener noreferrer">
-                    ESIEE Paris
-                </a>
+                    contreverse</a>
+                a <a href="https://www.esiee.fr/" target="_blank" rel="noopener noreferrer">
+                    ESIEE Paris</a>
                 par<br><br>
                 Les ingénieurs de tout a l'heure:<br>
                 DEBELLE Hugo, DAMELET Rémi, DAVID Augustin et DELESALLE Thomas<br>
